# Generic

./: README.md
ChamranUniversityCpp_Advanced_Programming_992_Project/: Advanced_Programming_992_Project.rar  README.md
ChamranUniversityCpp_Advanced_Programming_992_Project/imp/Advanced_Programming_992_Project/: CMakeLists.txt  mainTest.cpp
ChamranUniversityCpp_Advanced_Programming_992_Project/imp/Advanced_Programming_992_Project/include/: Agent.h  Agent_factory.h  Controller.h  Farm.h  Model.h  Peasant.h  Sim_object.h  Soldier.h  Structure.h  Town_Hall.h  View.h  exceptions.h
ChamranUniversityCpp_Advanced_Programming_992_Project/imp/Advanced_Programming_992_Project/lib/: Agent_factory.cpp  Controller.cpp  Farm.cpp  Geometry.cpp  Model.cpp  Moving_object.cpp  Peasant.cpp  Soldier.cpp  Structure_factory.cpp  Town_Hall.cpp  View.cpp
generic_OOP_CRUD_DesignPattern_java/: README.md  SM_DM.db  student_manager.uml
generic_Spring_Mongo_CRUD/: HELP.md  README.md  build.gradle  movies.json  settings.gradle
generic_Spring_Mongo_CRUD/src/main/resources/: application.properties
generic_coreAPI_java/: .css.css  ExamplePeople.csv  PROJE (2).rar  README.md  Requirements.html  build.gradle  people.csv
generic_coreAPI_java/gradle/wrapper/: gradle-wrapper.properties
generic_coreAPI_java/src/test/java/: AllTests.java  TestApp.java  TestR1_Persons.java  TestR2_Hubs.java  TestR3_Reading.java  TestR4_Orario.java  (+4 more)
student_question_app/: README.md  settings.gradle
student_question_app/BackEnd/: build.gradle
student_question_app/UI/: build.gradle  database.db  exam.json
(+58 files in other folders)
